--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
    },
    "repository": {
       "type": "git",
-      "url": ""
+      "url": "https://github.com/roisuladib/api-apotek-sayung"
    },
    "keywords": [
       "node",
