--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@ APP_NAME=APIs Apotek Sayung
 AUTHOR=Mas Adib
 EMAIL=adib17r@gmail.com
 HP=0895704447596
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 APP_URL=http://localhost:3001
 APP_CLIENT_URL=
